# ml-zoomcamp

./: hm01.ipynb  hm02.ipynb  hm03.ipynb  hm04.ipynb
hw05/: Dockerfile  app.py  hm05.ipynb  pyproject.toml  requirements.txt
