[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-conversion-api"
version = "1.0.0"
description = "FastAPI application for predicting lead conversion probability"
authors = [{name = "ML Zoomcamp", email = "example@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "joblib==1.5.2",
    "numpy==2.3.4", 
    "scikit-learn==1.6.1",
    "scipy==1.16.3",
    "threadpoolctl==3.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 79
target-version = ['py38']

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
